# rmq

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
scripts/: claim.lua
src/: builder.rs  consumer.rs  delivery.rs  errors.rs  lib.rs  options.rs  prefetch.rs  queue.rs  scaling.rs
tests/: integration_tests.rs
