[package]
name = "rmq"
version = "0.0.3"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", optional = true }
async-trait = "0.1.85"
dashmap = "6.1.0"
eyre = { version = "0.6.12", optional = true }
fred = { version = "10.0.3", features = [
    "default-nil-types",
    "enable-rustls-ring",
    "i-cluster",
    "i-streams",
    "i-scripts",
    "serde-json",
    "sha-1",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
uuid = { version = "1.12.0", features = [
    "fast-rng",
    "serde",
    "v7",
    "zerocopy",
] }

[dev-dependencies]
eyre = "0.6.12"
rand = "0.8.5"

[features]
default = []
anyhow = ["dep:anyhow"]
eyre = ["dep:eyre"]
