[package]
name = "rmq"
version = "0.3.1"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.98", optional = true }
async-trait = "0.1.88"
dashmap = "6.1.0"
eyre = { version = "0.6.12", optional = true }
fred = { version = "10.1.0", features = [
    "default-nil-types",
    "enable-rustls-ring",
    "i-cluster",
    "i-streams",
    "i-scripts",
    "serde-json",
    "sha-1",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
uuid = { version = "1.16.0", features = [
    "fast-rng",
    "serde",
    "v7",
    "zerocopy",
] }

[dev-dependencies]
eyre = "0.6.12"
rand = "0.9.1"
serial_test = "3.2.0"
sysinfo = "0.35.0"

[features]
default = []
anyhow = ["dep:anyhow"]
eyre = ["dep:eyre"]
