[package]
name = "rmq"
version = "0.3.7"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.100", optional = true }
async-trait = "0.1.89"
dashmap = "6.1.0"
eyre = { version = "0.6.12", optional = true }
fred = { version = "10.1.0", features = [
    "default-nil-types",
    "enable-rustls-ring",
    "i-cluster",
    "i-streams",
    "i-scripts",
    "serde-json",
    "sha-1",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
uuid = { version = "1.19.0", features = [
    "fast-rng",
    "serde",
    "v7",
    "zerocopy",
] }

[dev-dependencies]
eyre = "0.6.12"
rand = "0.9.2"
serial_test = "3.2.0"
sysinfo = "0.37.2"

[features]
default = []
anyhow = ["dep:anyhow"]
eyre = ["dep:eyre"]
